INCLUDE_DIRECTORIES(
	"${PROJECT_SOURCE_DIR}/src/sllib/api"
	"${PROJECT_SOURCE_DIR}/src/public"
)
SET(SL_ATTR_GEN
	"${PROJECT_SOURCE_DIR}/src/attrgen/AttrGen.cpp"
)

SOURCE_GROUP(public FILES ${PUBLIC})
SOURCE_GROUP(\\ FILES ${SL_ATTR_GEN})

IF(WIN32)
	ADD_EXECUTABLE(AttrGen
		${PUBLIC}
		${SL_ATTR_GEN}
	)
ENDIF(WIN32)

TARGET_LINK_LIBRARIES(AttrGen
	${SL_LIB_DEBUG}
	${SL_LIB_RELEASE}
)

IF(WIN32)
	SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/build/windows")
ENDIF(WIN32)
