#cmake file
SET(SL_LOGIC_INTERFACE
	"${PROJECT_SOURCE_DIR}/src/logic/interface/IGate.h"
	"${PROJECT_SOURCE_DIR}/src/logic/interface/IHarbor.h"
	"${PROJECT_SOURCE_DIR}/src/logic/interface/IDCCenter.h"
	"${PROJECT_SOURCE_DIR}/src/logic/interface/IIdMgr.h"
	"${PROJECT_SOURCE_DIR}/src/logic/interface/IAgent.h"
	"${PROJECT_SOURCE_DIR}/src/logic/interface/IDB.h"
	"${PROJECT_SOURCE_DIR}/src/logic/interface/IEventEngine.h"
	"${PROJECT_SOURCE_DIR}/src/logic/interface/IFSM.h"
	"${PROJECT_SOURCE_DIR}/src/logic/interface/IMysqlMgr.h"
	"${PROJECT_SOURCE_DIR}/src/logic/interface/ICapacity.h"
	"${PROJECT_SOURCE_DIR}/src/logic/interface/IDistribution.h"
	"${PROJECT_SOURCE_DIR}/src/logic/interface/IAccount.h"
	"${PROJECT_SOURCE_DIR}/src/logic/interface/IRoleMgr.h"
	"${PROJECT_SOURCE_DIR}/src/logic/interface/ILogic.h"
	"${PROJECT_SOURCE_DIR}/src/logic/interface/IRedis.h"
    "${PROJECT_SOURCE_DIR}/src/logic/interface/ICacheDB.h"
    "${PROJECT_SOURCE_DIR}/src/logic/interface/IScriptEngine.h"
	"${PROJECT_SOURCE_DIR}/src/logic/interface/OCTimer.h"
	"${PROJECT_SOURCE_DIR}/src/logic/interface/OCTimer.cpp"
)

SET(SL_LOGIC_DEFINE
	"${PROJECT_SOURCE_DIR}/src/logic/define/NodeDefine.h"
	"${PROJECT_SOURCE_DIR}/src/logic/define/NodeProtocol.h"
	"${PROJECT_SOURCE_DIR}/src/logic/define/AgentProtocol.h"
	"${PROJECT_SOURCE_DIR}/src/logic/define/GameDefine.h"
	"${PROJECT_SOURCE_DIR}/src/logic/define/Attr.h"
	"${PROJECT_SOURCE_DIR}/src/logic/define/DBDef.h"
	"${PROJECT_SOURCE_DIR}/src/logic/define/EventID.h"
) 
 
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/logic/harbor)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/logic/agent)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/logic/slave)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/logic/starter)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/logic/capacity)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/logic/master)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/logic/cluster)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/logic/dccenter)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/logic/idmgr)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/logic/gate)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/logic/db)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/logic/eventengine)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/logic/mysqlmgr)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/logic/scriptengine)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/logic/distribution)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/logic/account)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/logic/rolemgr)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/logic/logic)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/logic/attrgetter)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/logic/redis)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/logic/cachedb)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/logic/ai)
