ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/sllib/slxml)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/sllib/sltimer)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/sllib/slnet)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/sllib/sldb)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/sllib/slredis)
#ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/sllib/slthread)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/sllib/slshm)