INCLUDE_DIRECTORIES(
	"${PROJECT_SOURCE_DIR}/src/sllib/api"
	"${PROJECT_SOURCE_DIR}/src/public"
	"${PROJECT_SOURCE_DIR}/src/kernel/api"
	"${PROJECT_SOURCE_DIR}/src/kernel/interface"
	"${PROJECT_SOURCE_DIR}/src/kernel"
)
SET(SL_TEST
	"${PROJECT_SOURCE_DIR}/src/test/test.cpp"
)

SOURCE_GROUP(api FILES ${SL_KERNEL_API})
SOURCE_GROUP(public FILES ${PUBLIC})
SOURCE_GROUP(\\ FILES ${SL_TEST})

IF(WIN32)
	ADD_EXECUTABLE(test
		${SL_LIB_API}
		${SL_TEST}
	)
ENDIF(WIN32)

TARGET_LINK_LIBRARIES(test
	${SL_LIB_DEBUG}
	${SL_LIB_RELEASE}
)

IF(WIN32)
	SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/build/windows")
ENDIF(WIN32)
