INCLUDE_DIRECTORIES(
	"${PROJECT_SOURCE_DIR}/src/common"
)

SET(NETWORK
	"${PROJECT_SOURCE_DIR}/src/libs/network/sladdress.h"
	"${PROJECT_SOURCE_DIR}/src/libs/network/sladdress.cpp"
)

SOURCE_GROUP(common FILES ${COMMON})
SOURCE_GROUP(\\ FILES ${NETWORK})

ADD_LIBRARY(network SHARED
	${COMMON}
	${NETWORK}
)

SET_PROPERTY(TARGET network PROPERTY FOLDER "libs")